fixed alignment of input and button fields (mantis=1184)

--- a/less/content/buttons.less
+++ b/less/content/buttons.less
@@ -30,3 +30,7 @@ a.ilSubmitInactive, a.ilSubmitInactive:hover , a.ilSubmitInactive:active {
 .btn-group.il-btn-month.open span.il-current-month {
   color: @tax-button-month-text-color;
 }
+
+input.btn.btn-default {
+  vertical-align: unset;
+}
