--- a/less/content/content.less
+++ b/less/content/content.less
@@ -77,3 +77,6 @@ ul.dropdown-menu > li > #mm_pd_lp {
   display: none;
 }
 
+input.form-control {
+  height: unset;
+}
